k8s/overlays/production/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring-frontend.production.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: monitoring-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-frontend-service
            port:
              number: 8080
